DOC-10193 Sort out the spacing between admonition blocks and surrounding text. Fixed icon positioning.

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -309,9 +309,9 @@ ul ul ul {
 }
 
 .doc .admonitionblock td.icon {
-  padding-top: var(--admonition-icon-space);
-  padding-left: var(--admonition-icon-space);
-  padding-right: var(--admonition-icon-space);
+  padding-top: var(--admonition-icon-space) !important;
+  padding-left: var(--admonition-icon-space) !important;
+  padding-right: var(--admonition-icon-space) !important;
   padding-bottom: 0;
 }
 
